--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "lib/Blog.js",
   "dependencies": {
+    "ansi-256-colors": "^1.1.0",
+    "ansi-html": "0.0.5",
+    "ansi_up": "^1.3.0",
     "babel-plugin-syntax-flow": "^6.8.0",
     "babel-preset-react": "^6.5.0"
   },
